--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,3 +52,7 @@ flutter:
   #
   # For details regarding fonts in packages, see
   # https://flutter.dev/custom-fonts/#from-packages
+  fonts:
+    - family: ArknightsIcons
+      fonts:
+        - asset: font/ArknightsIcons.ttf
