--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,9 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-  #
+  assets:
+    - assets/background.jpg
+
   # For details regarding assets in packages, see
   # https://flutter.dev/assets-and-images/#from-packages
   #
