--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  # https://pub.dev/packages/fluent_ui
+  fluent_ui: ^3.12.0
 
 dev_dependencies:
   flutter_test:
